Added Google Analytics

--- a/templates/landing.html
+++ b/templates/landing.html
@@ -3,6 +3,7 @@
 <head>
 	<title>Mobile App Developer Diploma</title>
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
+	<script src="js/googleanalytics.js"></script>
 	<link rel="stylesheet" href="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.4/css/bootstrap.min.css">
 	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-alpha.5/css/bootstrap.min.css" integrity="sha384-AysaV+vQoT3kOAXZkl02PThvDr8HYKPZhNT5h/CXfBThSRXQ6jW5DO2ekP5ViFdi" crossorigin="anonymous">
 	<link rel="stylesheet" type="text/css" href="css/cover.css">
@@ -19,7 +20,7 @@
 	}
 	#nav_fields a{
 		color: #c2c2e0;
-		padding-bottom: 17px;
+		/*padding-bottom: 17px;*/
 	}
 	#nav_fields li a.selected{
 		border-bottom: 2px solid #c2c2e0;
