--- a/templates/navbar_responsive.html
+++ b/templates/navbar_responsive.html
@@ -3,6 +3,7 @@
 <head>
 	<title>Programming, Algorithms & Data Structures Diploma</title>
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <script src="js/googleanalytics.js"></script>
 	<!-- <link rel="stylesheet" href="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.4/css/bootstrap.min.css"> -->
 	<!-- <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-alpha.5/css/bootstrap.min.css" integrity="sha384-AysaV+vQoT3kOAXZkl02PThvDr8HYKPZhNT5h/CXfBThSRXQ6jW5DO2ekP5ViFdi" crossorigin="anonymous">
 	<link rel="stylesheet" type="text/css" href="css/cover.css">
@@ -78,8 +79,8 @@
           	  <li class="hidden-md hidden-sm">
               	<a href="#">Diploma Programs<span class="carat visible-xs"></span></a>
                 <ul class="dropdown-menu">
-                  	<li><a href="http://fju-diploma.appspot.com/" target="_blank">Mobile App Development Diploma</a></li>
-	        		      <li><a href="http://fju-diploma.appspot.com/programming_diploma" target="_blank">Programming Diploma</a></li>
+                  	<li><a href="/diploma">Mobile App Development Diploma</a></li>
+	        		      <!-- <li><a href="/diplomaprogramming_diploma" target="_blank">Programming Diploma</a></li> -->
               	</ul>
           	  </li>
           	  <li class="hidden-md hidden-sm"><a href="templates/contact-us.html">Contact Us</a></li>
@@ -91,8 +92,8 @@
           	  		<li>
 		              	<a href="#">Diploma Programs<span class="carat visible-xs"></span></a>
 		                <ul class="dropdown-menu">
-		                  	<li><a href="http://fju-diploma.appspot.com/" target="_blank">Mobile App Development Diploma</a></li>
-			        		<li><a href="http://fju-diploma.appspot.com/programming_diploma" target="_blank">Programming Diploma</a></li>
+		                  	<li><a href="/diploma">Mobile App Development Diploma</a></li>
+			        		<!-- <li><a href="/diplomaprogramming_diploma" target="_blank">Programming Diploma</a></li> -->
 		              	</ul>
 		          	  </li>
           	  		<li><a href="templates/contact-us.html">Contact Us</a></li>
@@ -106,8 +107,8 @@
                   <li>
                     <a href="#">Diploma Programs<span class="carat visible-xs"></span></a>
                     <ul class="dropdown-menu">
-                        <li><a href="http://fju-diploma.appspot.com/" target="_blank">Mobile App Development Diploma</a></li>
-                        <li><a href="http://fju-diploma.appspot.com/programming_diploma" target="_blank">Programming Diploma</a></li>
+                        <li><a href="/diploma" target="_blank">Mobile App Development Diploma</a></li>
+                        <li><a href="/diplomaprogramming_diploma" target="_blank">Programming Diploma</a></li>
                     </ul>
                   </li>
                   <li><a href="templates/contact-us.html">Contact Us</a></li>
