--- a/templates/enrollment.html
+++ b/templates/enrollment.html
@@ -3,6 +3,7 @@
 <head>
 	<title>Mobile App Developer Diploma</title>
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
+	<script src="js/googleanalytics.js"></script>
 	<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
 	<script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-alpha.5/js/bootstrap.min.js" integrity="sha384-BLiI7JTZm+JWlgKa0M0kGRpJbF2J8q+qreVrKBC47e3K6BW78kGLrCkeRX6I9RoK" crossorigin="anonymous"></script>
 	<script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.0/jquery.min.js"></script>
