--- a/templates/landing2.html
+++ b/templates/landing2.html
@@ -2,6 +2,7 @@
 <html>
 <head>
 	<title>Mobile App Developer Diploma</title>
+	<script src="js/googleanalytics.js"></script>
 	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-alpha.5/css/bootstrap.min.css" integrity="sha384-AysaV+vQoT3kOAXZkl02PThvDr8HYKPZhNT5h/CXfBThSRXQ6jW5DO2ekP5ViFdi" crossorigin="anonymous">
 	<link rel="stylesheet" type="text/css" href="cover.css">
 	<script src="https://use.fontawesome.com/7c465464d6.js"></script>
