--- a/templates/programming_diploma.html
+++ b/templates/programming_diploma.html
@@ -3,6 +3,7 @@
 <head>
 	<title>Programming, Algorithms & Data Structures Diploma</title>
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
+	<script src="js/googleanalytics.js"></script>
 	<link rel="stylesheet" href="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.4/css/bootstrap.min.css">
 	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-alpha.5/css/bootstrap.min.css" integrity="sha384-AysaV+vQoT3kOAXZkl02PThvDr8HYKPZhNT5h/CXfBThSRXQ6jW5DO2ekP5ViFdi" crossorigin="anonymous">
 	<link rel="stylesheet" type="text/css" href="css/cover.css">
