--- a/templates/zoomed-image.html
+++ b/templates/zoomed-image.html
@@ -5,6 +5,7 @@
 
 
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8"/>
+	<script src="js/googleanalytics.js"></script>
 	<link rel="stylesheet" href="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.4/css/bootstrap.min.css">
 	<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
     <script src="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.4/js/bootstrap.min.js"></script>
