--- a/templates/index.html
+++ b/templates/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title>FJU Android Developer Diploma</title>
+	<title>FJU Android Developer Masters Degree</title>
 	<script src="js/googleanalytics.js"></script>
 	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-alpha.5/css/bootstrap.min.css" integrity="sha384-AysaV+vQoT3kOAXZkl02PThvDr8HYKPZhNT5h/CXfBThSRXQ6jW5DO2ekP5ViFdi" crossorigin="anonymous">
 	<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
@@ -63,7 +63,7 @@
 			</div>
 			<!-- <div id="nav_fields" class="col-md-6 text-xs-right">
 				<a href="#syllabus">Syllabus</a>
-				<a href="#why_dip">Why Diploma?</a>
+				<a href="#why_dip">Why Masters Degree?</a>
 				<a href="#enroll_sec">Enrollment</a>
 				<button class="btn btn-secondary" onclick="document.location.href='/enroll';">Enroll Now</button>
 			</div> -->
@@ -72,16 +72,16 @@
 	<div id="small_head" class="container-fluid"><br><br><br><br><br>
 		<div class="col-md-3"></div>
 		<div class="col-md-6 text-xs-center">
-			<h6 class="text-muted">DIPLOMA PROGRAM</h6>
+			<h6 class="text-muted">MASTERS DEGREE PROGRAM</h6>
 			<h1>Mobile App Development</h1>
 			<p class="text-muted">Mastery in Building Android Apps</p>
 		</div>
 		<div class="col-md-3"></div>
 	</div>
 <div class="container">
-	<!-- <h2 class="text-xs-center">Android Diploma Program</h2> -->
+	<!-- <h2 class="text-xs-center">Android Masters Degree Program</h2> -->
 	<br>
-	<p>Students of the diploma are required to complete 7 Android app projects in 6 - 12 months (variable duration). Student will be evaluated based on the work done on each of the 7 projects. Each project will have interim checkpoints. FJU will provide a list of open education resources in the form of MOOC, tutorials, QnA forums, etc. for the students to learn the concepts. Coach will provide an orientation for the project and will guide the student to make a project plan. This project planning would result in having a schedule for interim checkpoints for the student. Coach will use this schedule to follow up and guide the students to revise it from time to time. Student can make appointment with the coach when he/she needs help. This process goes on until the student reaching one of the interim checkpoints and at this time the coach is evaluating the work done and will provide feedback. The project plan will be revised if needed.</p>
+	<p>Students of the masters degree are required to complete 7 Android app projects in 6 - 12 months (variable duration). Student will be evaluated based on the work done on each of the 7 projects. Each project will have interim checkpoints. FJU will provide a list of open education resources in the form of MOOC, tutorials, QnA forums, etc. for the students to learn the concepts. Coach will provide an orientation for the project and will guide the student to make a project plan. This project planning would result in having a schedule for interim checkpoints for the student. Coach will use this schedule to follow up and guide the students to revise it from time to time. Student can make appointment with the coach when he/she needs help. This process goes on until the student reaching one of the interim checkpoints and at this time the coach is evaluating the work done and will provide feedback. The project plan will be revised if needed.</p>
 </div><br>
 <div class="container">
 	<div class="row">
