--- a/templates/landing.html
+++ b/templates/landing.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title>Mobile App Developer Diploma</title>
+	<title>Mobile App Developer Masters Degree</title>
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<script src="js/googleanalytics.js"></script>
 	<link rel="stylesheet" href="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.4/css/bootstrap.min.css">
@@ -9,7 +9,7 @@
 	<link rel="stylesheet" type="text/css" href="css/cover.css">
 	<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
 	<script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-alpha.5/js/bootstrap.min.js" integrity="sha384-BLiI7JTZm+JWlgKa0M0kGRpJbF2J8q+qreVrKBC47e3K6BW78kGLrCkeRX6I9RoK" crossorigin="anonymous"></script>
-	<link rel="stylesheet" type="text/css" href="css/navbar.css">
+	<link rel="stylesheet" type="text/css" href="templates/css/navbar.css">
 	<link rel="stylesheet" type="text/css" href="css/navbar_custom.css">
 </head>
 <style type="text/css">
@@ -30,14 +30,14 @@
 	<div id="navbar_field"></div>
 	<div id="small_head" class="container col-md-12 text-xs-center"><br><br><br>
 		<h1>Mobile App Development</h1>
-		<h3 style="font-weight: 100;">Online Diploma Program</h3>
+		<h3 style="font-weight: 100;">Online Masters Degree Program</h3>
 		<h5 style="font-weight: 100;">Learning to Create Android Apps. Mastery in 6 Months</h5><br>
 		<div>
 			<ul id="nav_fields" style="list-style-type: none" class="text-xs-center">
 				<li class="col-md-1"></li>
-				<li><a class="col-md-2 selected" href="#small_head" >Overview</a></li>
+				<li><a class="col-md-2 selected" href="#" >Overview</a></li>
 				<li><a class="col-md-2" href="#syllabus" >Course Projects</a></li>
-				<li><a class="col-md-2" href="#why_dip" >Why Diploma?</a></li>
+				<li><a class="col-md-2" href="#why_dip" >Why Masters?</a></li>
 				<li><a class="col-md-2" href="#tuition" >Tution</a></li>
 				<li><a class="col-md-2" href="#enroll_sec" >Enrollment</a></li>
 				<li class="col-md-1"></li>
@@ -48,7 +48,7 @@
 	<div style="padding:0px; " class="container">
 		<div style="font-size:18px;" class="col-md-12 text-xs-left"><br>
 			<h2 class="text-xs-center">Overview</h2><br>
-			<p style="color: black">Mobile App Development is one of the diploma programs offerred by Franklin Jefferson University with the goal of creating experts in Android App Development. The curriculum of the program consists of a series of learning by doing projects designed to help students attain mastery in Android App Development. The list of seven projects to be completed is given below:</p><br>
+			<p style="color: black">Mobile App Development is one of the masters degree programs offerred by Franklin Jefferson University with the goal of creating experts in Android App Development. The curriculum of the program consists of a series of learning by doing projects designed to help students attain mastery in Android App Development. The list of seven projects to be completed is given below:</p><br>
 		</div>
 	</div> <!-- description field -->
 	
@@ -70,7 +70,7 @@
 						    	<h6>PROJECT 1</h6> 
 						    	<h4 style="color: black">Mockup Screens for Store Front</h4>
 						      	<p style="font-size: 1rem">Develop a simple app that displays information about a small store.</p>
-						      	<p style="font-size: 1rem"><b style="color: #373a3c">Topics Covered: </b><br>Building Layouts, Applying Styles, Writng Views and ViewGroups, Learning XML</p><br>
+						      	<p style="font-size: 1rem"><b style="color: #373a3c">Topics Covered: </b><br>Building Layouts, Applying Styles, Writng Views and ViewGroups, Learning XML</p>
 						    </blockquote>
 						  </div>
 						</div>
@@ -121,7 +121,7 @@
 						    	<h6>PROJECT 5</h6>
 						    	<h4 style="color: black">Payment & Shipment Tracking</h4>
 						      	<p style="font-size: 1rem">Integrate a payment screen into the Store App and also add a facility to track shipment.</p>
-						      	<p style="font-size: 1rem"><b style="color: #373a3c">Topics Covered: </b><br>Integrating Payment Gateway, Store the shipping details, Tracking Shipment.</p><br>
+						      	<p style="font-size: 1rem"><b style="color: #373a3c">Topics Covered: </b><br>Integrating Payment Gateway, Store the shipping details, Tracking Shipment.</p>
 						    </blockquote>
 						  </div>
 						</div>
@@ -147,28 +147,28 @@
 	<div id="why_dip" class="container" ><br><br><br><br><br>
 		<div class="row">
 			<div class="col-md-12">
-				<h2 class="text-xs-center">Why Take This Diploma Program?</h2><br>
-				<h6 class="spl-h6">Our Diploma Program</h6>
+				<h2 class="text-xs-center">Why Take This Masters Degree Program?</h2><br>
+				<h6 class="spl-h6">Our Masters Degree Program</h6>
 				<div style="padding-left: 3%">
-					<p>With the increase in usage of mobile phones, there comes a demand for better applications. And in turn, huge scope for Android App Development Jobs. At FJU, we are offering a Diploma Program which provides a mastery based learn by doing education to teach the skills that your prospective employers care for. You will not only learn the hard technical skills but also put to practice the meta skills required to work as a professional android developer.</p>
+					<p>With the increase in usage of mobile phones, there comes a demand for better applications. And in turn, huge scope for Android App Development Jobs. At FJU, we are offering a Masters Degree Program which provides a mastery based learn by doing education to teach the skills that your prospective employers care for. You will not only learn the hard technical skills but also put to practice the meta skills required to work as a professional android developer.</p>
 				</div>
 				<h6 class="spl-h6">Why FJU?</h6>
 				<ul class="spl-ul" style="list-style-type: none; font-size: 18px">
 					<li><i class="glyphicon glyphicon-ok-sign" aria-hidden="true"></i> <b>Personalised feedback</b> on projects</li>
 					<li><i class="glyphicon glyphicon-ok-sign" aria-hidden="true"></i> <b>Access to a library</b> of open educational resources</li>
-					<li><i class="glyphicon glyphicon-ok-sign" aria-hidden="true"></i> <b>Diploma</b> from FJU</li>
+					<li><i class="glyphicon glyphicon-ok-sign" aria-hidden="true"></i> <b>Masters Degree</b> from FJU</li>
 					<li><i class="glyphicon glyphicon-ok-sign" aria-hidden="true"></i> <b>Access to Forums</b> and FAQs</li>
 				</ul>
 			</div>
 		</div>
-	</div> <!-- why diploma -->
+	</div> <!-- why masters degree -->
 	
 	<div  id="tuition" class="container"><br><br><br><br><br>
 		<div class="row">
 			<div class="col-md-12">
 				<h2 class="text-xs-center">Tution</h2><br><br>
-				<p class="text-xs-left">In India, fee for our Diploma program is <b>Rs. 60,000 for 6 Months.</b> Students who do not complete the diploma in 6 months can continue to study by paying a fee of <b>Rs. 10,000 per month after 6 months.</b></p>
-				<p class="text-xs-left">In U.S, fee for our Diploma program is <b>1500 USD for 6 Months.</b> Students who do not complete the diploma in 6 months can continue to study by paying a fee of <b>250 USD per month after 6 months</b>.</p><br><br>
+				<p class="text-xs-left">In India, fee for our Masters Degree program is <b>Rs. 90,000 for 18 months.</b> Students who do not complete the masters degree in 18 months can continue to study by paying a fee of <b>Rs. 10,000 per month after 18 months</b>.</p>
+				<p class="text-xs-left">In U.S, fee for our Masters Degree program is <b>1500 USD for 18 Months.</b> Students who do not complete the masters degree in 18 months can continue to study by paying a fee of <b>250 USD per month after 18 months</b>.</p><br><br>
 				</ul>
 			</div>
 		</div>
@@ -183,11 +183,11 @@
 					<div class="col-md-12">
 						<div class="text-xs-left" >
 							<br>
-							<p>The following prerequisites are required for admission into the diploma program.</p>
+							<p>The following prerequisites are required for admission into the masters degree program.</p>
 							<ul class="spl-ul" style="list-style-type: none; font-size: 18px; padding-left: 30px">
 								<li>
 									<i class="glyphicon glyphicon-ok-sign" aria-hidden="true"></i> 
-									Must be a <b>Graduate</b> or about to complete Graduation by the time the diploma program starts.
+									Must be a <b>Graduate</b> or about to complete Graduation by the time the masters degree program starts.
 								</li>
 								<li>
 									<i class="glyphicon glyphicon-ok-sign" aria-hidden="true"></i> 
@@ -199,7 +199,7 @@
 								</li>
 								<li>
 									<i class="glyphicon glyphicon-ok-sign" aria-hidden="true"></i> 
-									<a href="/diploma/enroll" style="color: blue" target="_blank"> Register</a> and pay <b>Rs. 500 Entrance Test Fee.</b>
+									<a href="/masters/enroll" style="color: blue" target="_blank"> Register</a> and pay <b>Rs. 500 Entrance Test Fee.</b>
 								</li>
 								<li>
 									<i class="glyphicon glyphicon-ok-sign" aria-hidden="true"></i> 
@@ -265,7 +265,7 @@
 							      	<p style="font-size: 16px">Aptitude test is for 30 minutes and evaluates your quantitative, analytical, reasoning and verbal skills.<br>English Language comprehension Test is for 25 minutes and evaluates your capability of reading, listening, speaking and writing in English.</p>
 							      	<br>
 							      	<h5>How do I take the Test?</h5>
-							      	<p style="font-size: 16px">This test is given through an online test portal. To take the exam you must <a href="/diploma/enroll" style="color: blue">register</a> for the diploma program. Link to the test portal and instructions to get started will be communicated through an email at registered email address.<br>Requirements: <br>Before you can begin the test, make sure that Skype is installed in your laptop. If it is not installed you can get it <a href="https://www.skype.com/en/download-skype/skype-for-computer/" style="color: blue">here</a>.</p>
+							      	<p style="font-size: 16px">This test is given through an online test portal. To take the exam you must <a href="/masters/enroll" style="color: blue">register</a> for the masters degree program. Link to the test portal and instructions to get started will be communicated through an email at registered email address.<br>Requirements: <br>Before you can begin the test, make sure that Skype is installed in your laptop. If it is not installed you can get it <a href="https://www.skype.com/en/download-skype/skype-for-computer/" style="color: blue">here</a>.</p>
 							      	<h5>What are the Test Dates?</h5>
 							      </div>
 							      <div class="modal-footer">
@@ -289,7 +289,7 @@
 							      	<p style="font-size: 16px; margin-bottom: 0px">Programming Competency Test is an Online proctored examination to evaluate your Coding skills.</p>
 							      	<br>
 							      	<h5>How do I take the Test?</h5>
-							      	<p style="font-size: 16px">To take the exam you must <a href="/diploma/enroll" style="color: blue">register</a> for the diploma program. Questions and instructions to get started will be communicated through an email at registered email address.<br>Requirements: <br>Before you can begin the test, make sure that Skype is installed in your laptop. If it is not installed you can get it <a href="https://www.skype.com/en/download-skype/skype-for-computer/" style="color: blue">here</a>.</p>
+							      	<p style="font-size: 16px">To take the exam you must <a href="/masters/enroll" style="color: blue">register</a> for the masters degree program. Questions and instructions to get started will be communicated through an email at registered email address.<br>Requirements: <br>Before you can begin the test, make sure that Skype is installed in your laptop. If it is not installed you can get it <a href="https://www.skype.com/en/download-skype/skype-for-computer/" style="color: blue">here</a>.</p>
 							      	<h5>What are the Test Dates?</h5>
 							      </div>
 							      <div class="modal-footer">
@@ -301,7 +301,7 @@
 						</div>
 						<div class="text-xs-center" style="background-color: transparent; padding: 5%; padding-top: 0px">
 							<!-- <small>If all the above pre-requisites are met you may proceed to the Enrollment Page.</small><br><br> -->
-							<a href="/diploma/enroll" class="btn btn-primary">Enroll Now</a>
+							<a href="/masters/enroll" class="btn btn-primary">Enroll Now</a>
 						</div>
 					</div>
 				</div>
@@ -329,7 +329,7 @@
 	});
 </script>
 <script type="text/javascript">
-	$.get("/navbar", function(data){
+	$.get("/navbar_masters", function(data){
 		$("#navbar_field").replaceWith(data);
 	});
 </script>
