--- a/templates/css/navbar.css
+++ b/templates/css/navbar.css
@@ -283,6 +283,26 @@ body {
   margin-top: 15px;
 }
 
+@media only screen and (min-device-width : 320px) and (max-device-width : 480px) {
+  .navbar-nav li {
+    margin: 0px;
+    margin-top: 0px;
+    padding-top: 5px;
+    padding-bottom: 5px;
+    border-bottom: 1px solid #9e9e9e;
+  }
+  .navbar-collapse {
+    min-height: 1000px;
+    max-height: 100%;
+    padding-right: 0px;
+  }
+
+  .navbar-nav {
+    width: 100%;
+    margin-right: 0px;
+  }
+}
+
 .navbar-nav li a {
   color: rgba(255, 255, 255, .8);
   font-weight: 600;
