--- a/templates/enrollment_step3.html
+++ b/templates/enrollment_step3.html
@@ -17,7 +17,7 @@
 		<li>III. Telugu Language Comprehension Test </li>
 	</ul>
 	</p> -->
-	<div class="text-xs-center"><a class="btn btn-primary" href="/diploma">Back to Homepage</a></div><br>
+	<div class="text-xs-center"><a class="btn btn-primary" href="/masters">Back to Homepage</a></div><br>
   </div>
 </div>
 <script type="text/javascript">
